--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="gr.teicm.se.closestofferfinder.client.presentation.MyOffers"
+            android:label="@string/title_activity_my_offers" >
+        </activity>
     </application>
 
 </manifest>
