--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.fasterxml.jackson:jackson-parent:2.5-rc1'
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.ning:async-http-client:1.9.0-BETA23'
+    compile 'org.bitbucket.dollar:dollar:1.0-beta3'
 }
