--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.ning:async-http-client:1.9.0-BETA23'
     compile 'org.bitbucket.dollar:dollar:1.0-beta3'
+    compile 'com.android.support:support-v4:21.0.2'
 }
