--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.ApplicationSettingsActivity"
+            android:label="@string/title_activity_application_settings" >
+        </activity>
     </application>
 
 </manifest>
