--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+        testApplicationId "gr.teicm.se.closestofferfinder.client.test"
     }
     buildTypes {
         release {
