--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activities.MainActivity"
+            android:name="gr.teicm.se.closestofferfinder.client.presentation.activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,11 +25,11 @@
             android:label="@string/title_activity_my_offers" >
         </activity>
         <activity
-            android:name=".activities.OfferDescription"
+            android:name="gr.teicm.se.closestofferfinder.client.presentation.activities.OfferDescription"
             android:label="@string/title_activity_offer_description" >
         </activity>
         <activity
-            android:name=".activities.IntroActivity"
+            android:name="gr.teicm.se.closestofferfinder.client.presentation.activities.IntroActivity"
             android:label="@string/title_activity_intro" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,7 +43,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".activities.LocationAwarenessActivity"
+            android:name="gr.teicm.se.closestofferfinder.client.presentation.activities.LocationAwarenessActivity"
             android:label="@string/title_activity_location_awareness" >
         </activity>
     </application>
